# advanced-weathercaster

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: tests.yml
config/: config.yaml  config_notide.yaml  regimes.yaml  stations_core50.yaml  stations_full.yaml  stations_probe_full.yaml  stations_probe_m1.yaml
docs/: decisions.md  research_memo.md
reports/: ablations_52station_report.md  ablations_52station_report_results.csv  distill_52station_report.md  distill_52station_report_results.csv  distill_fullscale_report.md  distill_fullscale_report_results.csv  final_report.md  gbm_52station_report.md  gbm_52station_report_results.csv  gbm_fullscale_report.md  gbm_fullscale_report_results.csv  leadtime_report.md  leadtime_report_results.csv  milestone1_report.md  milestone1_report_results.csv  milestone2_report.md  milestone2_report_results.csv  mlp_artifact_results.csv  mlp_optionB_full_results.csv  mlp_optionB_results.csv  regimes_report.md  regimes_report_results.csv  smoke3_report.md  smoke3_report_results.csv  wind_outputs_report.md  wind_outputs_report_results.csv
scripts/: build_mlp_artifact.py  export_webcalc_model.py  export_webcalc_wind.py  run_distill.py  run_leadtime.py  run_m1_ingest.py  run_m1_probe.py  run_m2_ingest.py  run_regimes.py  run_wind.py  verify_verbal_thresholds.py
src/neosager/: __init__.py  cli.py  climo.py  config.py  dataset.py  (+5 more)
tests/: helpers.py  test_features.py  test_infer_int.py  test_infer_int_mlp.py  test_isd_parse.py  test_labels.py  test_sager.py  test_verbalize.py  test_wind_labels.py  test_zambretti.py
webcalc/: index.html  neosager_float.js  neosager_float.json  neosager_wind.js
(+34 files in other folders)
